--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ieeegun",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.13.0",
     "@emailjs/browser": "^3.11.0",
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.13",
@@ -17,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
     "react-pdf": "^6.2.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
