--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ieeegun",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "/ieee-sb",
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.13.0",
     "@emailjs/browser": "^3.11.0",
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
